[lworld] C2 compilation fails with "monitors must always exist for synchronized methods"

XMLWordPrintable

      # Internal Error (/oracle/valhalla_int/open/src/hotspot/share/opto/output.cpp:1053), pid=22707, tid=22719
      # assert(!method || !method->is_synchronized() || method->is_native() || num_mon > 0 || !GenerateSynchronizationCode) failed: monitors must always exist for synchronized methods

      Current CompileTask:
      C2: 639 28 s b 4 java.io.InputStream::mark (1 bytes)

      Stack: [0x00007f2e30045000,0x00007f2e30146000], sp=0x00007f2e30141200, free space=1008k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x147c5f1] PhaseOutput::Process_OopMap_Node(MachNode*, int)+0x1601
      V [libjvm.so+0x147d798] PhaseOutput::fill_buffer(CodeBuffer*, unsigned int*)+0x1168
      V [libjvm.so+0x148042e] PhaseOutput::Output()+0x133e
      V [libjvm.so+0x941bb0] Compile::Code_Gen()+0x420
      V [libjvm.so+0x949087] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x17a7
      V [libjvm.so+0x77c765] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x175
      V [libjvm.so+0x9582ee] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x45e
      V [libjvm.so+0x959e28] CompileBroker::compiler_thread_loop()+0xab8
      V [libjvm.so+0x1771926] JavaThread::thread_main_inner()+0x226
      V [libjvm.so+0x1777820] Thread::call_run()+0x100
      V [libjvm.so+0x1457906] thread_native_entry(Thread*)+0x116

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: