8244519: [lworld] C2 compilation fails with 'monitors must always exist for synchronized methods'